kube/homework01-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: balitskii-homework01-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/balitskii($|/)(.*)
            backend:
              serviceName: balitskii-homework01-service
              servicePort: 8000
